20170830 CSC: Estilos de la aplicación

--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -7,7 +7,6 @@
     </div>
   </div>
 
-  <div class="chatFromWrapper">
-    <app-chat-form></app-chat-form>
-  </div>
-
+<div class="chatFormWrapper">
+  <app-chat-form></app-chat-form>
+</div>
