20170902 CSC Componente de signup y message

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -4,10 +4,10 @@
       {{ userName }}
     </span>
     <span class="timestamp">
-        {{ timeStamp | date: 'medium' }}
+      {{ timeStamp | date:'medium' }}
     </span>
   </div>
-  <div>
+  <div class="messageContent">
     {{ messageContent }}
   </div>
 </div>
